# Saturn

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Build_Project.bat  CMakeLists.txt  README.md  Saturn.sln  Saturn_UML.txt  VulkanRenderer.sln  setup.xml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  RenderWindow.h  makefile
Engine/include/: Application.h  AssetManager.h  Core.h  Engine.h  EntityHierarchy.h  EntryPoint.h  ProgressView.h  Scene.h  SceneCamera.h  Serializable.h  UUID.h  Vertex.h  pch.h  structs.h
Engine/include/Assets/: Asset.h  AssetHolder.h  MaterialShader.h  ModelAsset.h  TextureAsset.h
Engine/include/ECS/: ComponentBase.h  ComponentType.h  Components.h  Entity.h  Events.h  MetaComponent.h
Engine/include/Graphics/: DebugRenderer.h  IRenderLayer.h  IRenderTechnique.h  Material.h  RenderPipeline.h  RenderTarget.h  (+2 more)
Engine/lib/: Enginex64Debug.lib  Enginex64Release.lib
Engine/shaders/: BloomShader.comp  BlurImage.comp  Compose.frag  Compose.frag.spv  CompositeBloom.comp  DebugDrawing.frag  DebugDrawing.vert  DebugHeatmap.frag  DefaultFragmentInputs.glsl  DefaultRendering.glsl  DefaultVertexInputs.glsl  Filter.comp  ForwardColorPass.frag  ForwardColorPass.frag.spv  ForwardColorPass.vert  ForwardColorPass.vert.spv  ForwardPlusColorPass.frag  ForwardPlusColorPass.frag.spv  ForwardPlusColorPass.vert  ForwardPlusColorPass.vert.spv  ForwardPlusDepthPrePass.vert  GaussianBlur.comp  GaussianBlur.comp.spv  LightCulling.comp  LightCulling1.comp  LightCulling2.comp  PostProcess.frag  PostProcess.frag.spv  PostProcess.vert  PostProcess.vert.spv  PostProcessFragmentShader.frag  PostProcessFragmentShader.spv  ShadowPass.frag  ShadowPass.vert  Skybox.frag  Skybox.vert  Texture.frag  Texture.frag.spv  Texture.vert  Texture.vert.spv  (+6 more)
Engine/src/: Application.cpp  Application.h  Asset.cpp  AssetManager.cpp  AssetManager.h  BloomRenderLayer.cpp  BoxCollider.cpp  ByteStream.cpp  Camera.cpp  Camera.h  CameraController.h  Clock.cpp  ComponentType.cpp  Components.cpp  Core.h  CustomImGui.cpp  CustomImGui.h  DebugRenderer.cpp  Engine.cpp  Engine.h  Entity.cpp  EntityHierarchy.cpp  EntityHierarchy.h  EntityScript.cpp  EntityScript.h  EntryPoint.h  Events.h  ForwardPlus.cpp  ForwardRenderer.cpp  ForwardRenderer.h  IRenderLayer.cpp  IRenderTechnique.cpp  IRenderTechnique.h  Light.cpp  LuaAccessable.cpp  Material.cpp  MaterialShader.cpp  Math.cpp  MemoryChecker.cpp  MetaComponent.cpp  (+46 more)
EngineEditor/: CMakeLists.txt  EngineEditor.vcxproj  EngineEditor.vcxproj.filters  GroupByName.lua  Inventory.lua  Movable.lua  SetupOtherScene.lua  imgui.ini  profile_result.json  recent_projects.txt  sceneCache.data  sceneCache.json  test.lua  test2.lua
EngineEditor/imgui-1.86/: imconfig.h
EngineEditor/shaders/: TextureVertexShader.spv  TextureVertexShader.vert
EngineEditor/src/: CustomImGui.cpp  CustomImGui.h  DirectoryView.cpp  DirectoryView.h  EditorModule.cpp  EditorModule.h  EditorView.cpp  EditorView.h  EngineEditor.cpp  EngineEditor.h  EntityInspector.cpp  EntityInspector.h  Events.h  FileTemplates.cpp  FileTemplates.h  GameView.cpp  GameView.h  ImGuiRenderLayer.cpp  ImGuiRenderLayer.h  LuaConsole.cpp  LuaConsole.h  RenderPipelinePreferences.cpp  RenderPipelinePreferences.h  SaturnEditorApp.cpp  SceneHierarchy.cpp  SceneHierarchy.h  SceneView.cpp  SceneView.h  TestLayer.cpp  TestLayer.h  main.cpp  main1.cpp
EngineTest/: CMakeLists.txt  EngineTest.vcxproj  EngineTest.vcxproj.filters  GreenBox.dae  Suzanne.dae  TestLayer.cpp  TestLayer.h  imgui.ini  main.cpp  profile_result.json  project.xml  test.lua  test2.lua  testComponent.lua
EngineTest/Assets/: MyScene.asset
EngineTest/Survival_BackPack_2/: Survival_BackPack.fbx
EngineTest/models/: GreenBox.fbx  Suzanne.fbx
EngineTest/stone_ore_1/: stone_ore.fbx
VulkanRenderer/: CMakeLists.txt  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters
VulkanRenderer/include/: ApiBuildOptions.h  CommandPool.hpp  DataManager.hpp  DescriptorSetStructs.h  DeviceMemoryStats.hpp  Format.hpp  FormatFlags.hpp  FramebufferSet.cpp  FramebufferSet.hpp  Image.cpp  Image.hpp  InputEnums.hpp  Logger.cpp  Logger.hpp  PipelineLayout.hpp  PipelineSettings.hpp  RenderContext.cpp  RenderContext.hpp  RenderProgramFactory.cpp  RenderProgramFactory.hpp  RenderWindow.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  ShaderInfoStructs.h  ShaderSet.hpp  Texture.hpp  VulkanCore.hpp  Window.hpp  debugFunctions.h  functions.hpp  imconfig.h  imgui_impl_glfw.h  imgui_impl_vulkan.h  pch.h  structs.hpp  vk_mem_alloc.h  vulkan_base.hpp
VulkanRenderer/src/: Buffer.cpp  CommandPool.cpp  DataManager.cpp  DescriptorSet.cpp  DeviceMemoryManager.cpp  DynamicBuffer.cpp  DynamicTexture.cpp  FramebufferSet.cpp  Image.cpp  ImageView.cpp  Logger.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderContext.cpp  RenderProgram.cpp  RenderProgramFactory.cpp  RenderWindow.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  ShaderInfoStructs.cpp  ShaderModule.cpp  ShaderSet.cpp  Swapchain.cpp  Texture.cpp  VulkanCore.cpp  Window.cpp  debugFunctions.cpp  functions.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp  utils.cpp  vulkan_base.cpp
VulkanRendererTest/: BareBones.frag  BareBones.vert  BlurShader.comp  BlurShader.comp.spv  CMakeLists.txt  ComputeFragmentShader.frag  ComputeFragmentShader.frag.spv  ComputeFragmentShader.spv  ComputeShader.comp  ComputeShader.comp.spv  ComputeShader.spv  ComputeVertexShader.spv  ComputeVertexShader.vert  ComputeVertexShader.vert.spv  ForwardShader.frag  ForwardShader.frag.spv  ForwardShader.vert  ForwardShader.vert.spv  MainShader.frag  MainShader.frag.spv  Passthrough.frag  Passthrough.vert  PostProcess.frag  PostProcess.frag.spv  PostProcess.vert  PostProcess.vert.spv  RaytracingFragment.frag  RaytracingFragment.frag.spv  RaytracingFragment.spv  RaytracingVertex.spv  RaytracingVertex.vert  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv  TestShader.frag  TestShader.frag.spv  TestShader.vert  TestShader.vert.spv  TextureFragmentShader.frag  (+18 more)
(+272 files in other folders)
